spring-cloud-k8s/spring-cloud-k8s-consumer/src/main/jkube/sc-consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-cloud-k8s-consumer
  namespace: bjrdc-dev
spec:
  selector:
    app: spring-cloud-k8s-consumer
  ports:
  - name: http
    port: 8096
