spring-cloud-k8s/spring-cloud-k8s-consumer/src/main/jkube/sc-consumer-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sc-k8s-consumer-ingress
  namespace: bjrdc-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  rules:
  - host: ingress.bjrdc17
    http:
      paths:
      - path: /sc-consumer
        backend:
          serviceName: spring-cloud-k8s-consumer
          servicePort: 8096
